@@ -219,12 +219,12 @@
 			                                        ATTR_NON_NULL_PTR_ARG(1) ATTR_ALWAYS_INLINE;
 			static inline void Scheduler_ResetDelay(SchedulerDelayCounter_t* const DelayCounter)
 			{
-				uint_reg_t CurrentGlobalInt = USB_INT_GetGlobalEnableState();
-				USB_INT_GlobalDisable();
+				uint_reg_t CurrentGlobalInt = GetGlobalInterruptMask();
+				GlobalInterruptDisable();
 
 				*DelayCounter = Scheduler_TickCounter;
 
-				USB_INT_SetGlobalEnableState(CurrentGlobalInt);
+				SetGlobalInterruptMask(CurrentGlobalInt);
 			}
 
 		/* Function Prototypes: */
